version/0.76/_sources/autoapi/pyedb/grpc/database/hierarchy/s_parameter_model/SparamModel.rst.txt






:class:`SparamModel`
====================


.. py:class:: pyedb.grpc.database.hierarchy.s_parameter_model.SparamModel(component)

   
   Manage :class:`SParameterModel <ansys.edb.core.hierarchy.sparameter_model.SParameterModel>`
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SparamModel

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~is_null`
            - Check if the S-parameter model is null.
          * - :py:attr:`~name`
            - Get the name of the S-parameter model.
          * - :py:attr:`~component_model_name`
            - Get the name of the S-parameter model.
          * - :py:attr:`~reference_net`
            - Get the reference net of the S-parameter model.
          * - :py:attr:`~file_path`
            - Get the file path of the S-parameter model.


   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~core`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.grpc.database.hierarchy.s_parameter_model import SparamModel

Property detail
---------------

.. py:property:: is_null

   
   Check if the S-parameter model is null.





   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           True if the S-parameter model is null, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:property:: name

   
   Get the name of the S-parameter model.





   :Returns:

       :class:`python:str`
           The name of the S-parameter model.











   ..
       !! processed by numpydoc !!

.. py:property:: component_model_name

   
   Get the name of the S-parameter model.





   :Returns:

       :class:`python:str`
           The name of the S-parameter model.











   ..
       !! processed by numpydoc !!

.. py:property:: reference_net

   
   Get the reference net of the S-parameter model.





   :Returns:

       :class:`python:str`
           The reference net of the S-parameter model.











   ..
       !! processed by numpydoc !!

.. py:property:: file_path

   
   Get the file path of the S-parameter model.





   :Returns:

       :class:`python:str`
           The file path of the S-parameter model.











   ..
       !! processed by numpydoc !!



Attribute detail
----------------

.. py:attribute:: core





